Used list instead of set for IDs in getUserWithGivenIds endpoint.